# partition_kes

./: CMakeLists.txt  prj.conf  sysbuild.conf
drivers/led/: led_driver.c  led_driver.h
src/: aes.c  ca.c  certs.h  config.c  config.h  enc.c  enc.h  fota.c  fota.h  led_shell.c  main.c  pem_command.c  private.c  public.c  shell_commands.c  shell_commands.h  test.c  test.h
